syntax = "proto3";
package core.smh.solo.io;
option go_package = "github.com/solo-io/service-mesh-hub/pkg/api/core.smh.solo.io/v1alpha1/types";

import "service-mesh-hub/api/core/v1alpha1/ref.proto";
import "service-mesh-hub/api/core/v1alpha1/status.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;

// The Mesh types known to Service Mesh Hub. Note that there is some duplication between this enum and the discovery.MeshSpec message
enum MeshType {
    ISTIO1_5 = 0;
    ISTIO1_6 = 1;
    APPMESH = 2;
    CONSUL = 3;
    LINKERD = 4;
}
